fix(backend):Termino de refinacion de documentacion v1
