# backend/openapi-spec.json
@@ -673,6 +673,7 @@
     },
     "/api/v1/poas/mi-poa-actual": {
       "get": {
+        "description": "",
         "operationId": "PoasController_getPoaActual",
         "parameters": [],
         "responses": {
@@ -687,6 +688,7 @@
             }
           }
         },
+        "summary": "Devuelve la POA en la que se esta trabajando",
         "tags": [
           "POAs"
         ]
@@ -694,6 +696,7 @@
     },
     "/api/v1/poas/{poaid}/actividades": {
       "post": {
+        "description": "",
         "operationId": "PoasController_agregarActividades",
         "parameters": [
           {
@@ -727,6 +730,7 @@
             }
           }
         },
+        "summary": "Agregar actividades",
         "tags": [
           "POAs"
         ]
@@ -734,6 +738,7 @@
     },
     "/api/v1/poas/{poaid}/presentar": {
       "post": {
+        "description": "",
         "operationId": "PoasController_presentarPoa",
         "parameters": [
           {
@@ -767,13 +772,15 @@
             }
           }
         },
+        "summary": "Presentar la poa para el envio",
         "tags": [
           "POAs"
         ]
       }
     },
-    "/api/v1/poas": {
+    "/api/v1/poas/{poaid}/cancelar-envio": {
       "post": {
+        "description": "",
         "operationId": "PoasController_cancelarEnvio",
         "parameters": [
           {
@@ -785,21 +792,12 @@
             }
           }
         ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/CancelarPoaDataDto"
-              }
-            }
-          }
-        },
         "responses": {
-          "201": {
-            "description": ""
+          "default": {
+            "description": "Se regresa el estado de la POA de enviada a en progreso"
           }
         },
+        "summary": "Cancela el envio de la POA",
         "tags": [
           "POAs"
         ]
@@ -807,6 +805,7 @@
     },
     "/api/v1/catalogos/banco-actividades": {
       "get": {
+        "description": "",
         "operationId": "CatalogoController_getBancoActividades",
         "parameters": [
           {
@@ -828,6 +827,7 @@
             }
           }
         },
+        "summary": "Muestra el catalogo de actividades",
         "tags": [
           "Catalogos"
         ]
@@ -835,6 +835,7 @@
     },
     "/api/v1/catalogos/banco-actividades/{id}": {
       "get": {
+        "description": "",
         "operationId": "CatalogoController_getBancoActividadesById",
         "parameters": [
           {
@@ -858,6 +859,7 @@
             }
           }
         },
+        "summary": "Buscar actividad por ID",
         "tags": [
           "Catalogos"
         ]
@@ -865,6 +867,7 @@
     },
     "/api/v1/catalogos/banco-actividades/{id}/sub-actividades-sugeridas": {
       "get": {
+        "description": "",
         "operationId": "CatalogoController_getSubActividadesSugeridas",
         "parameters": [
           {
@@ -888,6 +891,7 @@
             }
           }
         },
+        "summary": "Entrega sub-actividades sugeridas",
         "tags": [
           "Catalogos"
         ]
@@ -895,6 +899,7 @@
     },
     "/api/v1/catalogos/centros": {
       "get": {
+        "description": "",
         "operationId": "CatalogoController_getCentros",
         "parameters": [],
         "responses": {
@@ -909,6 +914,7 @@
             }
           }
         },
+        "summary": "Entrega los centros de trabajo",
         "tags": [
           "Catalogos"
         ]
@@ -916,6 +922,7 @@
     },
     "/api/v1/auditores": {
       "get": {
+        "description": "",
         "operationId": "AuditoresController_getAuditores",
         "parameters": [],
         "responses": {
@@ -930,6 +937,7 @@
             }
           }
         },
+        "summary": "Entrega lista de auditores",
         "tags": [
           "Auditores"
         ]
@@ -937,6 +945,7 @@
     },
     "/api/v1/dashboard/contralor/kpis": {
       "get": {
+        "description": "",
         "operationId": "DashboardController_getDashboardContralor",
         "parameters": [],
         "responses": {
@@ -951,6 +960,7 @@
             }
           }
         },
+        "summary": "Entrega los kpis del dashboard contralor",
         "tags": [
           "Dashboard"
         ]
@@ -958,6 +968,7 @@
     },
     "/api/v1/dashboard/jefatura/kpis": {
       "get": {
+        "description": "",
         "operationId": "DashboardController_getDashboardJefa",
         "parameters": [],
         "responses": {
@@ -972,6 +983,7 @@
             }
           }
         },
+        "summary": "Entrega los kpis del dashboard jefa",
         "tags": [
           "Dashboard"
         ]
@@ -979,6 +991,7 @@
     },
     "/api/v1/dashboard/jefatura/rezago-centros": {
       "get": {
+        "description": "",
         "operationId": "DashboardController_getRezagoCentros",
         "parameters": [],
         "responses": {
@@ -993,6 +1006,7 @@
             }
           }
         },
+        "summary": "Entrega los centros con rezago",
         "tags": [
           "Dashboard"
         ]
@@ -1986,18 +2000,26 @@
           },
           "estado": {
             "type": "string",
-            "enum": [
-              "SIN ENVIAR",
-              "EN REVISION",
-              "DEVUELTA",
-              "ACEPTADA",
-              "BORRADOR"
-            ],
             "description": "Estado de la actividad(enum)",
-            "example": "BORRADOR"
+            "example": "EN_PROGRESO"
+          },
+          "fecha_inicio": {
+            "type": "string",
+            "description": "Fecha de inicio de la POA",
+            "example": "Ene 2026"
+          },
+          "fecha_termino": {
+            "type": "string",
+            "description": "Fecha de termino de la POA",
+            "example": "Dic 2026"
+          },
+          "es_rezagado": {
+            "type": "boolean",
+            "description": "Le indica al sistema si la POA tiene actividades rezagadas.",
+            "example": false
           },
           "actividades_resumen": {
-            "description": "Lista de acrividades de manera resumida",
+            "description": "Lista de actividades de manera resumida",
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/ActividadesResumenDto"
@@ -2008,6 +2030,9 @@
           "id",
           "anio_fiscal",
           "estado",
+          "fecha_inicio",
+          "fecha_termino",
+          "es_rezagado",
           "actividades_resumen"
         ]
       },
@@ -2057,7 +2082,22 @@
           "objetivo_general": {
             "type": "string",
             "description": "Objetivo de la actividad",
-            "example": 2026
+            "example": "Asegurar la correcta aplicación..."
+          },
+          "objetivos_especificos": {
+            "type": "string",
+            "description": "Objetivos especificos de la actividad",
+            "example": "Revisar el ejercicio de los recursos y los procesos.."
+          },
+          "metas": {
+            "type": "string",
+            "description": "Metas de la actividad",
+            "example": "06 revisiones"
+          },
+          "indicadores": {
+            "type": "string",
+            "description": "Objetivos especificos de la actividad",
+            "example": "Numero de revisiones realizadas entre numero de revisiones programadas"
           },
           "equipo_auditor": {
             "description": "Informacion sobre el equipo de participantes en esta actividad",
@@ -2069,10 +2109,12 @@
           }
         },
         "required": [
-          "banco_actividad_id",
           "titulo",
           "justificacion",
           "objetivo_general",
+          "objetivos_especificos",
+          "metas",
+          "indicadores",
           "equipo_auditor"
         ]
       },
@@ -2101,7 +2143,7 @@
           "mensaje"
         ]
       },
-      "PresentarPoasDataDto": {
+      "PresentarPoasDto": {
         "type": "object",
         "properties": {
           "poa_id": {
@@ -2112,7 +2154,7 @@
           "estado_anterior": {
             "type": "string",
             "description": "Estado anterior de la POA",
-            "example": "BORRADOR"
+            "example": "EN_PROGRESO"
           },
           "estado_nuevo": {
             "type": "string",
@@ -2136,17 +2178,6 @@
           "estado_nuevo",
           "fecha_envio",
           "mensaje"
-        ]
-      },
-      "PresentarPoasDto": {
-        "type": "object",
-        "properties": {
-          "data": {
-            "$ref": "#/components/schemas/PresentarPoasDataDto"
-          }
-        },
-        "required": [
-          "data"
         ]
       },
       "PresentarPoasResponseErrorDto": {
@@ -2180,59 +2211,11 @@
           "detalles"
         ]
       },
-      "CancelarPoaDto": {
-        "type": "object",
-        "properties": {
-          "poa_id": {
-            "type": "string",
-            "description": "ID de la POA a cancelar",
-            "example": "uuid-poa-1234"
-          },
-          "estado_anterior": {
-            "type": "string",
-            "description": "Estado anterior de la POA",
-            "example": "EN_REVISION"
-          },
-          "estado_nuevo": {
-            "type": "string",
-            "description": "Estado nuevo de la POA",
-            "example": "BORRADOR"
-          },
-          "fecha_cancelacion": {
-            "type": "string",
-            "description": "Fecha de cancelación de la POA",
-            "example": "2026-06-28T19:45:00Z"
-          },
-          "mensaje": {
-            "type": "string",
-            "description": "Mensaje de cancelación de la POA",
-            "example": "El envío ha sido cancelado. El POA vuelve a estar disponible para su edición."
-          }
-        },
-        "required": [
-          "poa_id",
-          "estado_anterior",
-          "estado_nuevo",
-          "fecha_cancelacion",
-          "mensaje"
-        ]
-      },
-      "CancelarPoaDataDto": {
-        "type": "object",
-        "properties": {
-          "data": {
-            "$ref": "#/components/schemas/CancelarPoaDto"
-          }
-        },
-        "required": [
-          "data"
-        ]
-      },
       "BancoActividadesDto": {
         "type": "object",
         "properties": {
           "id": {
-            "type": "number",
+            "type": "string",
             "description": "ID de la actividad",
             "example": "banco-uuid-1"
           },
@@ -2264,14 +2247,6 @@
         "properties": {
           "data": {
             "description": "Lista de actividades",
-            "example": [
-              {
-                "id": 1,
-                "tipo": "AUDITORIA",
-                "titulo": "Revision al rubro de Obra Publica",
-                "descripcion_corta": "Verificar el adecuado cumplimiento de los procedimientos relativos a la..."
-              }
-            ],
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/BancoActividadesDto"
@@ -2859,6 +2834,31 @@
           "grafica_distribucion_estado"
         ]
       },
+      "DistribucionDto": {
+        "type": "object",
+        "properties": {
+          "actividades_criticas": {
+            "type": "number",
+            "description": "Numero de actividades en semaforo rojo",
+            "example": 8
+          },
+          "actividades_precaucion": {
+            "type": "number",
+            "description": "Numero de actividades en semaforo amarillo",
+            "example": 10
+          },
+          "total": {
+            "type": "number",
+            "description": "Suma de actividades criticas y en precaucion",
+            "example": 18
+          }
+        },
+        "required": [
+          "actividades_criticas",
+          "actividades_precaucion",
+          "total"
+        ]
+      },
       "RezagoDto": {
         "type": "object",
         "properties": {
@@ -2877,23 +2877,20 @@
             "description": "Nombre del centro universitario",
             "example": "Centro Universitario de Ciencias de la Salud"
           },
-          "actividades_criticas": {
-            "type": "number",
-            "description": "Numero de actividades criticas",
-            "example": 8
-          },
-          "porcentaje_del_rezago_global": {
-            "type": "number",
-            "description": "Que tanto del total de actividades son criticas",
-            "example": 36.3
+          "distribucion": {
+            "description": "Distribucion del centro con rezago",
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/DistribucionDto"
+              }
+            ]
           }
         },
         "required": [
           "centro_id",
           "centro_clave",
           "centro_nombre",
-          "actividades_criticas",
-          "porcentaje_del_rezago_global"
+          "distribucion"
         ]
       },
       "RezagoDataDto": {
