# backend/src/modules/poas/DTOS/request/poas-cancelar-data.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from "@nestjs/swagger";
+import { CancelarPoaDto } from "./poas-cancelar.dto";
+
+export class CancelarPoaDataDto{
+    @ApiProperty({
+        type: CancelarPoaDto
+    })
+    data: CancelarPoaDto;
+}
