# backend/src/modules/poas/DTOS/request/poas=presentar-data.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from "@nestjs/swagger";
+import { PresentarPoasDto } from "./poas-presentar.dto";
+
+export class PresentarPoasDataDto{
+    @ApiProperty({ 
+        type: PresentarPoasDto 
+    })
+    data: PresentarPoasDto;
+}
